--- a/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/api.html
+++ b/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/api.html
@@ -1,10 +1,15 @@
+{% extends "django_testproject/base.html" %}
+
+
+{% block content %}
 <dl>
-{% for method in methods %}
-<dt>Name:</dt>
-<dd>{{method.name}}</dd>
-<dt>Signature:</dt>
-<dd>{{method.signature}}</dd>
-<dt>Help:</dt>
-<dd>{{method.help}}</dd>
-{% endfor %}
+  {% for method in methods %}
+  <dt>Name:</dt>
+  <dd>{{method.name}}</dd>
+  <dt>Signature:</dt>
+  <dd>{{method.signature}}</dd>
+  <dt>Help:</dt>
+  <dd>{{method.help}}</dd>
+  {% endfor %}
 </dl>
+{% endblock %}
