--- a/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
+++ b/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
@@ -1,10 +1,31 @@
+{% extends "django_testproject/base.html" %}
+
+
+{% block content %}
+<h1>Authentication tokens</h1>
+{% if token_list %}
 <table>
-  {% for token in tokens %}
   <tr>
-    <td>{{ token.token }}</td>
-    <td>{{ token.creted_on }}</td>
-    <td>{{ token.last_used_on }}</td>
-    <td>{{ token.description }}</td>
+    <th>Description</th>
+    <th>Created on</th>
+    <th>Last used on</th>
+    <th>Secret</th>
+  </tr>
+  {% for token in token_list %}
+  <tr>
+    <td>{{ token.description|default:"empty" }}</td>
+    <td>{{ token.created_on|date }}</td>
+    <td>{{ token.last_used_on|default_if_none:"Never" }}</td>
+    <td>
+      <button id="button_{{ forloop.counter }}" onclick='document.getElementById("secret_{{ forloop.counter }}").style.display="block"; this.style.display="none";'>Show</button>
+      <code id="secret_{{ forloop.counter }}" style="display: none;">{{ token.secret }}</code>
+      <a href="{% url linaro_django_xmlrpc.views.delete_token token.pk %}">delete this token</a>
+    </td>
   </tr>
   {% endfor %}
 </table>
+{% else %}
+<p>There are no tokens associated with your account yet</p>
+{% endif %}
+<p>You can <a href="{% url linaro_django_xmlrpc.views.create_token %}">create authentication tokens</a> manually.</p>
+{% endblock %}
