--- a/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
+++ b/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
@@ -4,12 +4,13 @@
 {% block content %}
 <h1>Authentication tokens</h1>
 {% if token_list %}
-<table>
+<table border="1">
   <tr>
     <th>Description</th>
     <th>Created on</th>
     <th>Last used on</th>
     <th>Secret</th>
+    <th>Actions</th>
   </tr>
   {% for token in token_list %}
   <tr>
@@ -18,10 +19,11 @@
     <td>{{ token.last_used_on|default_if_none:"Never" }}</td>
     <td>
       <button id="button_{{ forloop.counter }}" onclick='document.getElementById("secret_{{ forloop.counter }}").style.display="block"; this.style.display="none";'>Show</button>
-      <code id="secret_{{ forloop.counter }}" style="display: none;">{{ token.secret }}</code>
+      <code style="overflow: auto; width: 25em; display:none;" id="secret_{{ forloop.counter }}">{{ token.secret }}</code>
     </td>
     <td>
       <a href="{% url linaro_django_xmlrpc.views.delete_token token.pk %}">delete this token</a>
+      <a href="{% url linaro_django_xmlrpc.views.edit_token token.pk %}">edit the description</a>
     </td>
   </tr>
   {% endfor %}
@@ -29,5 +31,5 @@
 {% else %}
 <p>There are no tokens associated with your account yet</p>
 {% endif %}
-<p>You can <a href="{% url linaro_django_xmlrpc.views.create_token %}">create authentication tokens</a> manually.</p>
+<p>You can <a href="{% url linaro_django_xmlrpc.views.create_token %}">create new authentication token</a>.</p>
 {% endblock %}
