django1.5 url compatibility change

--- a/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/create_token.html
+++ b/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/create_token.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Create new authentication token</h1>
-<form action="{% url linaro_django_xmlrpc.views.create_token %}" method="POST">
+<form action="{% url 'linaro_django_xmlrpc.views.create'_token %}" method="POST">
   {% csrf_token %}
   {{ form.as_table }}
   <input type="submit" value="Submit" />
