--- a/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
+++ b/linaro_django_xmlrpc/templates/linaro_django_xmlrpc/tokens.html
@@ -22,8 +22,8 @@
       <code style="overflow: auto; width: 25em; display:none;" id="secret_{{ forloop.counter }}">{{ token.secret }}</code>
     </td>
     <td>
-      <a href="{% url linaro_django_xmlrpc.views.delete_token token.pk %}">delete this token</a>
-      <a href="{% url linaro_django_xmlrpc.views.edit_token token.pk %}">edit the description</a>
+      <a href="{% url 'linaro_django_xmlrpc.views.delete_token' token.pk %}">delete this token</a>
+      <a href="{% url 'linaro_django_xmlrpc.views.edit_token' token.pk %}">edit the description</a>
     </td>
   </tr>
   {% endfor %}
@@ -31,5 +31,5 @@
 {% else %}
 <p>There are no tokens associated with your account yet</p>
 {% endif %}
-<p>You can <a href="{% url linaro_django_xmlrpc.views.create_token %}">create new authentication token</a>.</p>
+<p>You can <a href="{% url 'linaro_django_xmlrpc.views.create'_token %}">create new authentication token</a>.</p>
 {% endblock %}
